<resources>
    <string name="app_name">AreYuHere</string>
    <string name="username">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Log In</string>
    <string name="signin">Sign In</string>
    <string name="signuptitle">Create Account</string>
    <string name="code">Enter Code:</string>
    <string name="checkin">Check In</string>
    <string name="generate_code">Generate Code</string>
    <string name="checkout">Check Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checkedin">Currently checked in!</string>
    <string name="message">Checkout Everyone?</string>
    <string name="refresh">Refresh</string>
    <string name="signupstring"><u>New? Click Here!</u></string>
    <string name="name">Full Name:</string>
    <string name="signup">Sign Up</string>
    <string name="code_expiry_time">Code will expire at: %s</string>
    <string name="export">Click here to export today\'s attendance</string>
    <string name="exportmessage">Do you wish to export today\'s attendance?</string>
    <string name="displayname">Display Name:</string>
    <string name="teacherslider">I am a teacher </string>
    <string name="email">Email</string>
    <string name="fab_content_desc">Click to add a new classroom</string>
    <string name="classroom_new">Classroom Name:</string>
    <string name="expiry_text">Your code has expired</string>

</resources>