<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorSecondary"
        android:contentDescription="@string/app_name" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_textfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:elevation="20dp"
        android:hint="@string/classroom_new"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:startIconDrawable="@drawable/outline_create_classroom_black_18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_classroomname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        android:hint="@string/password"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textfield"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verification Method"
        android:layout_margin="20dp" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/verification_status"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/alphanumeric_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alphanumeric Code"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="QR Code"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submit_button" />
</LinearLayout>